--- a/home/ESP.html
+++ b/home/ESP.html
@@ -15,6 +15,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script data-main="Main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <script src="Main.js"></script>
+    <script src="../src/globe/Globe.js"></script>
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
 
