--- a/home/CitySmartV2.html
+++ b/home/CitySmartV2.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/menu.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script data-main="Main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <script data-main="Main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -92,27 +92,31 @@
     </style>
 </head>
 <body>
+
+
 <div id="myModal" class="modal">
-        <div class="modal-content">
+    <div class="modal-content">
 
-            <!-- Popup Box Header-->
-            <div class="modalHeader">
-                <p id="modalHeader">
-                    <br>
-                </p>
-                <p><span class="close">&times;</span></p>
-            </div>
-            <!-- Popup Box Body-->
-            <p class="modal-body" id="modalBody">
-
-            <!-- Popup Box Footer-->
-            <div class="modal-footer">
-                <p></p>
-            </div>
-
+        <!-- Popup Box Header -->
+        <div class="modalHeader">
+            <p od="modalHeader">
+                <br>
+            </p>
+            <p><span class="close">&times;</span></p>
         </div>
 
+        <!-- Popup Box Body -->
+        <p class="modal-body" id="modalBody"></p>
+
+        <!-- Popup Box Footer-->
+        <div class="modal-footer">
+            <p></p>
+        </div>
+
+    </div>
 </div>
+
+
 <div class="container">
     <div>
         <img src="../images/TL_WB_Banner.jpg" align="middle" alt="Placeholder Image" />
