--- a/home/ESP.html
+++ b/home/ESP.html
@@ -14,9 +14,7 @@
     <link rel="stylesheet" href="../css/menu.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script data-main="Main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
-    <script src="Main.js"></script>
-    <script src="../src/globe/Globe.js"></script>
+    <script data-main="Main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -64,6 +62,8 @@
                         <th>Show On Globe</th>
                         <th>Live Comparison</th>
                         <th>Historical Information</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     <tr>
                         <td></td>
@@ -74,12 +74,16 @@
                         <td><input type ="checkbox" value=""></td>
                         <td><input type ="checkbox"></td>
                         <td><input type ="checkbox"></td>
+                        <td><input type ="checkbox" name="I">Info</td>
+                        <td><input type ="checkbox" name="H">History</td>
                     </tr>
                     <tr>
                         <td>Station 2</td>
                         <td><input type ="checkbox"></td>
                         <td><input type ="checkbox"></td>
                         <td><input type ="checkbox"></td>
+                        <td><input type ="checkbox">Info</td>
+                        <td><input type ="checkbox">History</td>
                     </tr>
 
                 </table>
