--- a/home/ESP.html
+++ b/home/ESP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 
 <head>
@@ -12,9 +12,12 @@
     <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/menu.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="build/WorldWind-built.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script data-main="Main.js" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
+    <script data-main="Home.js" src="requirejs-2.3.6.min.js"></script>
+
+<!--    <script src="Main.js"></script>-->
     <style>
         body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -22,6 +25,16 @@
     </style>
 </head>
 
+<script>
+
+    function toggle(source) {
+        checkboxes = document.getElementsByName('Station');
+        for(var i = 0, n = checkboxes.length; i < n; i++) {
+            checkboxes[i].checked = source.checked;
+        }
+    }
+
+</script>
 
 <body>
 
@@ -58,7 +71,7 @@
                 <table style="width:100%">
 
                     <tr>
-                        <th>Station</th>
+                        <th>Stations</th>
                         <th>Show On Globe</th>
                         <th>Live Comparison</th>
                         <th>Historical Information</th>
@@ -67,33 +80,34 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><input type="checkbox"> All<br></td>
+                        <td><input type="checkbox" onclick="toggle(this)"> All<br></td>
                     </tr>
                     <tr>
                         <td>Station 1</td>
-                        <td><input type ="checkbox" value=""></td>
-                        <td><input type ="checkbox"></td>
-                        <td><input type ="checkbox"></td>
-                        <td><input type ="checkbox" name="I">Info</td>
-                        <td><input type ="checkbox" name="H">History</td>
+                        <td><input class="switch right switch_right myModal" type="checkbox" value="Station 1" name="Station"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox" name="I">Info</td>
+                        <td><input type="checkbox" name="H">History</td>
                     </tr>
                     <tr>
                         <td>Station 2</td>
-                        <td><input type ="checkbox"></td>
-                        <td><input type ="checkbox"></td>
-                        <td><input type ="checkbox"></td>
-                        <td><input type ="checkbox">Info</td>
-                        <td><input type ="checkbox">History</td>
+                        <td><input class="switch right switch_right myModal" type="checkbox" value="Station 2" name="Station"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox"></td>
+                        <td><input type="checkbox">Info</td>
+                        <td><input type="checkbox">History</td>
                     </tr>
 
                 </table>
 
             </div>
 
-            <div class="col-sm-9" id="globe">
-                <canvas id="canvasOne" width="1000" height="1000" style="width: 100%; height: auto;">
-                Your browser does not support HTML5 Canvas.
+            <div class="col-sm-9" id="globe" style="margin-left:420px;">
+                <canvas id="canvasOne" width="1000" height="1000" style="width:100%; height:auto">
+                    Your browser does not support HTML5 Canvas.
                 </canvas>
+
             </div>
 
         </div>
